--- a/lalechera.html
+++ b/lalechera.html
@@ -4,17 +4,19 @@
 <body>
 <table width="100%" height="100%" border="2">
 	<tr height="150">
-		<td colspan="2">
+		<td colspan="2" bgcolor="yellow" >
 			<center>
-		      <b> TORRELAVEGA </b> 
+		      <b> <font color="blue"/> TORRELAVEGA </b> 
 			</center>
 		</td>
 	</tr>
 	<tr>
-		<td width="200">
+		<td width="200"background=torrelavega2.jpg
+		<div>
 		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<div/>
 		<div> 
-		<a href="TORRELAVEGA.html"> TORRELAVEGA CIUDAD </a>
+		<a href="torrelavega.html">  TORRELAVEGA CIUDAD </a>
 		</div>
 		<div> 
 		<a href="parque.html"> PARQUE MANUEL BARQUIN </a>
@@ -22,14 +24,17 @@
 		</td>
 		<td>
 		<center> 
-		        <b> LA LECHERA </b> 
+		<br>
+		        <b> <font color=" blue"/>  LA LECHERA </b> 
+		</br>
 		</center>
 		<div>
 		<br/>
 		<div>
-		<center> <img src ="lalechera.jpg" width="500"> </center>
+		<center> <img src ="lalechera.jpg" width="500"/> </center>
 		</div>
 		</td>
 	</tr>
 </table>
 </body>
+
