--- a/parque.html
+++ b/parque.html
@@ -4,32 +4,35 @@
 <body>
 <table width="100%" height="100%" border="2">
 	<tr height="150">
-		<td colspan="2">
+		<td colspan="2" bgcolor="yellow" >
 			<center>
-		      <b> TORRELAVEGA </b> </font>
+		      <b> <font color="blue"/> TORRELAVEGA </b> </font>
 			</center>
 		</td>
 	</tr>
-	<tr>
-		<td width="200">
+		<td width="200"background=torrelavega2.jpg
+		<div>
 		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<div/>
 		<div> 
 		<a href="lalechera.html"> LA LECHERA </a>
 		</div>
 		<div> 
-		<a href="parque.html"> TORRELAVEGA CIUDAD </a>
+		<a href="torrelavega.html"> TORRELAVEGA CIUDAD  </a>
 		</div>
 		</td>
 		<td>
 		<center> 
-		        <b> PARQUE MANUEL BARQUIN </b> 
+		        <b>  <font color="purple"/> PARQUE MANUEL BARQUIN </b> 
 		</center>
 		<div>
 		<br/>
 		<div>
-		<center> <img src ="parque.jpg" width="500"> </center>
+		<center> <img src ="parque.jpg" width="500"/> </center>
 		</div>
 		</td>
 	</tr>
 </table>
 </body>
+
+
