--- a/TORRELAVEGA.html
+++ b/TORRELAVEGA.html
@@ -4,15 +4,17 @@
 <body>
 <table width="100%" height="100%" border="2">
 	<tr height="150">
-		<td colspan="2">
+		<td colspan="2" bgcolor="yellow" >
 			<center>
-		      <b> TORRELAVEGA </b> </font>
+		      <b> <font color="blue"/> TORRELAVEGA </b> </font>
 			</center>
 		</td>
 	</tr>
 	<tr>
-		<td width="200">
+		<td width="200"background=torrelavega2.jpg
+		<div>
 		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<div/>
 		<div> 
 		<a href="lalechera.html"> LA LECHERA </a>
 		</div>
@@ -22,12 +24,12 @@
 		</td>
 		<td>
 		<center> 
-		        <b> TORRELAVEGA CIUDAD </b> 
+		        <b>  <font color="green"/> TORRELAVEGA CIUDAD </b> 
 		</center>
 		<div>
 		<br/>
 		<div>
-		<center> <img src ="TORRELAVEGA.jpg" width="500"> </center>
+		<center> <img src ="TORRELAVEGA.jpg" width="500"/> </center>
 		</div>
 		</td>
 	</tr>
