--- a/mercado.html
+++ b/mercado.html
@@ -4,32 +4,36 @@
 <body>
 <table width="100%" height="100%" border="2">
 	<tr height="150">
-		<td colspan="2">
+		<td colspan="2" bgcolor="yellow">
 			<center>
-		      <b> TORRELAVEGA </b> </font>
+		      <b> <font color="blue"/> TORRELAVEGA </b> </font>
 			</center>
 		</td>
 	</tr>
 	<tr>
-		<td width="200">
-		<a href="TORRELAVEGA.html"> TORRELAVEGA CIUDAD	</a>
+		<td width="200"background=torrelavega2.jpg
+		<div>
+		<a href="torrelavega.html"> TORRELAVEGA CIUDAD	</a>
+		<div/>
 		<div> 
 		<a href="lalechera.html"> LA LECHERA </a>
 		</div>
 		<div> 
-		<a href="parque.html"> PARQUE BARQUIN </a>
+		<a href="parque.html"> PARQUE MANUEL BARQUIN </a>
 		</div>
 		</td>
 		<td>
 		<center> 
-		        <b> MERCADO DE GANADO </b> 
+		        <b> <font color="orange"/>  MERCADO DE GANADO</b> 
 		</center>
 		<div>
 		<br/>
 		<div>
-		<center> <img src ="mercado.jpg" width="500"> </center>
+		<center> <img src ="mercado.jpg" width="500"/> </center>
 		</div>
 		</td>
 	</tr>
 </table>
 </body>
+
+	
