--- a/lalechera.html
+++ b/lalechera.html
@@ -13,13 +13,13 @@
 	<tr>
 		<td width="200"background=torrelavega2.jpg
 		<div>
-		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<a href="mercado.html"> <font color="white"/> MERCADO DE GANADO	</font>	</a>
 		<div/>
 		<div> 
-		<a href="torrelavega.html">  TORRELAVEGA CIUDAD </a>
+		<a href="torrelavega.html"> <font color="white"/> TORRELAVEGA CIUDAD </font> </a>
 		</div>
 		<div> 
-		<a href="parque.html"> PARQUE MANUEL BARQUIN </a>
+		<a href="parque.html"> <font color="white"/> PARQUE MANUEL BARQUIN </font>	</a>
 		</div>
 		</td>
 		<td>
