--- a/mercado.html
+++ b/mercado.html
@@ -7,19 +7,19 @@
 		<td colspan="2" bgcolor="yellow">
 			<center>
 		      <b> <font color="blue"/> TORRELAVEGA </b> </font>
-			</center>
+			</center> 
 		</td>
 	</tr>
 	<tr>
 		<td width="200"background=torrelavega2.jpg
 		<div>
-		<a href="torrelavega.html"> TORRELAVEGA CIUDAD	</a>
+		<a href="torrelavega.html"> <font color="white"/> TORRELAVEGA CIUDAD </font>	</a>
 		<div/>
 		<div> 
-		<a href="lalechera.html"> LA LECHERA </a>
+		<a href="lalechera.html"> <font color="white"/> LA LECHERA </font>	</a>
 		</div>
 		<div> 
-		<a href="parque.html"> PARQUE MANUEL BARQUIN </a>
+		<a href="parque.html"> <font color="white"/> PARQUE MANUEL BARQUIN </font>	</a>
 		</div>
 		</td>
 		<td>
