--- a/parque.html
+++ b/parque.html
@@ -12,13 +12,13 @@
 	</tr>
 		<td width="200"background=torrelavega2.jpg
 		<div>
-		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<a href="mercado.html"> <font color="white"/> MERCADO DE GANADO	</font>	</a>
 		<div/>
 		<div> 
-		<a href="lalechera.html"> LA LECHERA </a>
+		<a href="lalechera.html"> <font color="white"/>  LECHERA </font>	</a>
 		</div>
 		<div> 
-		<a href="torrelavega.html"> TORRELAVEGA CIUDAD  </a>
+		<a href="torrelavega.html"> <font color="white"/> TORRELAVEGA CIUDAD  </a>
 		</div>
 		</td>
 		<td>
