--- a/TORRELAVEGA.html
+++ b/TORRELAVEGA.html
@@ -7,19 +7,18 @@
 		<td colspan="2" bgcolor="yellow" >
 			<center>
 		      <b> <font color="blue"/> TORRELAVEGA </b> </font>
-			</center>
-		</td>
+
 	</tr>
 	<tr>
 		<td width="200"background=torrelavega2.jpg
 		<div>
-		<a href="mercado.html"> MERCADO DE GANADO	</a>
+		<a href="mercado.html"> <font color="white"/> MERCADO DE GANADO </font>	</a>
 		<div/>
 		<div> 
-		<a href="lalechera.html"> LA LECHERA </a>
+		<a href="lalechera.html"> <font color="white"/> LA LECHERA  </font>	</a>
 		</div>
 		<div> 
-		<a href="parque.html"> PARQUE MANUEL BARQUIN </a>
+		<a href="parque.html"> <font color="white"/> PARQUE MANUEL BARQUIN </font>	  </a>
 		</div>
 		</td>
 		<td>
