--- a/lalechera.html
+++ b/lalechera.html
@@ -24,8 +24,11 @@
 		</td>
 		<td>
 		<center> 
-		<br>
-		        <b> <font color=" blue"/>  LA LECHERA </b> 
+		        <br>
+		        <b> <font color=" blue"/>  LA LECHERA </b> </font></br>
+				<br> El Recinto Ferial alberga numerosas exposiciones de diversa índole, 
+				como automoción, antigüedades o tecnología. </br>
+				También realiza periódicamente mercados de exposición y venta, y ocasionalmente conciertos.</br>
 		</br>
 		</center>
 		<div>
