--- a/mercado.html
+++ b/mercado.html
@@ -24,7 +24,12 @@
 		</td>
 		<td>
 		<center> 
-		        <b> <font color="orange"/>  MERCADO DE GANADO</b> 
+				 <br>
+		        <b> <font color=" blue"/>  MERCADO DE GANADO </b> </font></br>
+				<br> Es un edificio terminado en 1973 y proyectado por el 
+				arquitecto Federico Cabrillo Vázquez y el ingeniero José Calavera Ruiz. </br>
+				Sus dimensiones inmensas, hoy tan solo parcialmente utilizadas, 
+				lo convierten en uno de los mercados más grandes del mundo.
 		</center>
 		<div>
 		<br/>
