--- a/parque.html
+++ b/parque.html
@@ -23,7 +23,12 @@
 		</td>
 		<td>
 		<center> 
-		        <b>  <font color="purple"/> PARQUE MANUEL BARQUIN </b> 
+		        <br>
+		        <b> <font color=" purple"/>  MERCADO DE GANADO </b> </font></br>
+				<br>El parque Manuel Barquín, ocupa una superficie de veinte mil metros cuadrados
+				,se considera la zona más verde de la ciudad <br>
+				Algunos de los árboles que contiene son centenarios y forman parte del rico patrimonio 
+				forestal de Cantabria.
 		</center>
 		<div>
 		<br/>
