--- a/TORRELAVEGA.html
+++ b/TORRELAVEGA.html
@@ -23,7 +23,11 @@
 		</td>
 		<td>
 		<center> 
-		        <b>  <font color="green"/> TORRELAVEGA CIUDAD </b> 
+		        <br>
+		        <b>  <font color="green"/> TORRELAVEGA CIUDAD </b> </font> </br>
+				 <br> TORRELAVEGA es un municipio y ciudad del norte de España.
+				 <br>La ciudad es de carácter industrial y comercial, siendo el segundo
+				 núcleo urbano más relevante de la comunidad autónoma de Cantabria.</br>
 		</center>
 		<div>
 		<br/>
